# FTTHwatcher

./: .env.example  docker-compose.yml
app/components/: ChartContainer.vue  EChart.client.vue
app/composables/: useAuth.ts
app/layouts/: default.vue
app/middleware/: auth.global.ts
app/pages/: index.vue  login.vue  profile.vue
app/pages/admin/: users.vue
app/plugins/: api.ts
backend/: pyproject.toml
backend/api/: auth_views.py  reports_views.py  serializers.py  urls.py  views.py
backend/core/: settings.py
etl/: config.py  loaders.py  main.py  pyproject.toml  schema.py
